[package]
authors = ["Archer Heffern <heffernarcher@gmail.com>"]
categories = ["command-line-utilities"]
description = "Find deleted iMessages"
edition = "2024"
license = "GPL-3.0-or-later"
name = "imessage-undeleter"
repository = "https://github.com/nguyenv119/imessage-tracker"
version = "0.0.0"

[dependencies]
# Async runtime and streams
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography for hashing
blake3 = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for webhooks
reqwest = { version = "0.11", features = ["json"] }

# System utilities
dirs = "5.0"

# Original dependencies (kept for compatibility)
clap = { version = "=4.5.40", features = ["cargo"] }
filetime = "=0.2.25"
fdlimit = "=0.3.0"
fs2 = "=0.4.3"
imessage-database = { path = "../imessage-database" }
indicatif = "=0.17.11"
rusqlite = { version = "0.36.0", features = ["blob", "bundled"] }
crabapple = { version = "=0.4.1" }